fixed cell borders from being uneven.

--- a/src/app/sudoku-cell.component.css
+++ b/src/app/sudoku-cell.component.css
@@ -1,11 +1,12 @@
 .sudoku-cell {
     align-items: center;
     background-color: rgb(110, 192, 240);
-    border: 3px solid rgb(31, 135, 196);
-    border-radius: 2px;
+    border: 4px solid rgb(31, 135, 196);
+    margin:-2px;
     height: 33.33%;
     width: 33.33%;
     padding: 5px;
+
     color: rgb(100, 104, 109);
     font-family: Inter,sans-serif;
     font-size: 20px;
