--- a/src/app/sudoku-grid.component.css
+++ b/src/app/sudoku-grid.component.css
@@ -2,5 +2,4 @@
     display: inline-block;
     height: 33.33%;
     width: 33.33%;
-    padding:2px;
 }
